# ocaml-ctypes-inverted-stubs-example

./: .gitignore  .travis-ci.sh  .travis.yml  LICENSE  Makefile  README.md  appveyor.yml  dune  opam
appveyor/: build.sh
bindings/: bindings.ml  dune
dll/: dune
lib/: apply_bindings.ml  bindings.ml  dune
stub/: init.c
stub_generator/: dune  generate.ml
test/: Makefile  dune  test.c
