(rule (copy ../xmlm.h xmlm.h))

(rule
  (targets test.o)
  (deps (:x test.c) xmlm.h)
  (action (run %{ocamlc} -c %{x} -o test.o)))

(rule
  (targets test.exe)
  (deps test.o ../libxmlm%{ext_dll})
  (action (run %{cc} -o test.exe -Wl,-rpath,.. -L .. -lxmlm test.o)))

(alias
  (name runtest)
  (deps ocaml.svg)
  (action (run ./test.exe ocaml.svg)))
